--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -54,8 +54,8 @@
         </p>
       </div>
       <mat-tab-group class="workTabs">
-        <mat-tab label="EkStep" class="tabs">
-          <div class="tab-cont tab-sec style-text-worktab">
+        <mat-tab label="EkStep"  class="tabs" style="color:white;">
+          <div class="tab-cont  tab-sec style-text-worktab">
             <p>
               Ekstep, a not-for-profit, was co-founded by Nandan Nilekani,
               Rohini Nilekani, and Shankar Maruwada with the aim to address gaps
@@ -78,7 +78,7 @@
             </div>
           </div>
         </mat-tab>
-        <mat-tab label="Sunbird" class="tabs">
+        <mat-tab label="Sunbird"  class="tabs" style="color:white;">
           <div class="tab-cont tab-sec style-text-worktab">
             <p>
               <b>Code for one. Code for all.</b> <br />
